fixed some issues with scaling on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,15 @@
-body {
+html, body {
 	font-family: 'Lato';
+  width:  100%;
+  height: 100%;
+  margin: 0px;
 }
 
 hr {
-	padding: 5px;
 	background-color: #6A7580;
 	border-width: 0px;
+	margin: 0px;
+	padding: 5px;
 }
 
 h5 {
@@ -21,4 +25,12 @@ h5 {
 
 #dropdownWrap {
 	padding-top: 5px;
+}
+
+/* fix canvas to ~ 2:3 aspect ratio that always fits on screen */
+canvas {
+	height: 60vw;
+	width: 90vw;
+	max-height: 660px;
+	max-width: 1000px;
 }
